# CMakeList.txt : CMake project for CSCI_331_GP2_T2, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CSCI_331_GP2_T2")

# Add source to this project's executable.
add_executable (CSCI_331_GP2_T2 "CSCI_331_GP2_T2.cpp" "CSCI_331_GP2_T2.h")

# TODO: Add tests and install targets if needed.
